# stylus-red-packet

./: .env.example  .gitignore  15.html  16.html  2.html  4.html  5.html  6.html  7.html  README.md  index.html
app/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo
app/.next/server/: server-reference-manifest.js  server-reference-manifest.json
app/api/: balance.ts  claim.ts  health.ts  withdraw.ts
app/src/: App.tsx
app/src/lib/: encoding.ts  webauthn.ts
hello-world/: Cargo.toml  abi.json
hello-world/src/: main.rs
scripts/: deploy-contracts.sh
slides/: 1.html  10.html  11.html  12.html  13.html  14.html  15.html  3.html  5.html  7.html  8.html  9.html  index.html
stylus-escrow/: Cargo.toml  README.md
stylus-escrow/src/: lib.rs
stylus-redpacket/: Cargo.toml  README.md
stylus-redpacket/src/: lib.rs  main.rs
stylus-webauthn/: Cargo.toml  README.md
stylus-webauthn/src/: lib.rs  main.rs
web/: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css  main.tsx
web/src/hooks/: useHelloWorld.ts
web/src/lib/: appkit.ts  helloWorldAbi.ts
web/src/providers/: AppKitProvider.tsx
