[package]
name = "stylus-escrow"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["lib", "cdylib"]

[dependencies]
alloy-primitives = "1"
alloy-sol-types = "1"
stylus-sdk = "0.10.0"

[features]
default = ["mini-alloc"]
export-abi = ["stylus-sdk/export-abi"]
debug = ["stylus-sdk/debug"]
mini-alloc = ["stylus-sdk/mini-alloc"]
contract-client-gen = []

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
panic = "abort"
opt-level = "z"
